--- a/style.css
+++ b/style.css
@@ -10,19 +10,21 @@ body{
   background-color: #7a7a7a;
 }
 
-#corps{
+main{
   width: 994px;
   height: 1994px;
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
   background-color: white;
 }
 
-#corps h1{
+h1{
   padding-top: 50px;
   margin-left: 47px;
   margin-bottom: 10px;
+  font-weight: bold;
 }
 
 h5{
@@ -64,4 +66,51 @@ li{
   background-color: #c0c0c0;
   text-align: center;
   margin: auto;
+}
+
+h2{
+  text-align: center;
+  font-size: 28px;
+  font-family: 'Terminal Dosis'sans-serif;
+  margin-top: 38px;
+  margin-bottom: 22px;
+  font-weight: bold;
+}
+
+#milieu{
+  text-align: center;
+  font-size: 13px;
+}
+
+.text{
+  margin-left: 47px;
+  margin-right: 47px;
+  margin-top: 30px;
+}
+
+p{
+  margin-top: 30px;
+}
+
+#deco{
+  margin-left: 47px;
+  margin-right: 47px;
+  margin-top: 20px;
+  height: 40px;
+  background-color: #c0c0c0;
+}
+
+#older{
+  height: 75px;
+}
+
+
+
+
+footer{
+  width: 900px;
+  height: 235px;
+  background-color: #c0c0c0;
+  margin-left: 47px;
+  margin-right: 47px;
 }
